--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ja" data-version="v0.1.48">
+<html lang="ja" data-version="v0.1.49">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>運行中列車 v0.01 — 京王・井の頭線</title>
+<title>運行中列車 — 京王・井の頭線</title>
 <style>
-/* 基本スタイル（GitHub風・レスポンシブ） */
+/* 基本スタイル */
 :root{
   --bg:#f6f8fa; --panel:#ffffff; --muted:#6e7781; --border:#d0d7de; --accent:#0969da;
   --tokkyu:#FF4C7C; --kyuko:#00B66A; --kaisoku:#0082FF; --kukan:#D8D100; --kakutei:#ced0d4; --liner:#c71585; --linermt:#32cd32;
@@ -44,7 +44,6 @@ th,td{padding:8px 10px; border:1px solid var(--border); text-align:center; white
 th{background:transparent; cursor:pointer; font-weight:600}
 th.sorted-asc::after{content:" ▲"; font-weight:600}
 th.sorted-desc::after{content:" ▼"; font-weight:600}
-tr:hover td{background: rgba(0,0,0,0.03);}
 
 .badge{padding:4px 6px; border-radius:4px; display:inline-block}
 .tokkyu{background:var(--tokkyu); color:#fff}
@@ -56,7 +55,6 @@ tr:hover td{background: rgba(0,0,0,0.03);}
 .kakutei{background:var(--kakutei); color:#000}
 
 #alerts{max-width:1100px; margin:14px auto; background:var(--panel); border:1px solid var(--border); border-radius:8px; padding:12px}
-#alerts h3{margin:0 0 8px; font-size:14px}
 .alert-item{padding:8px; border-radius:6px; margin-bottom:8px; font-size:13px}
 .alert-delay{background:#ffdfe0; color:#900}
 .alert-exchange{background:#fff6d6; color:#8a5b00}
@@ -65,49 +63,33 @@ tr:hover td{background: rgba(0,0,0,0.03);}
 select.control, button.control{padding:6px 10px; border-radius:6px; border:1px solid var(--border); background:var(--panel); color:var(--text); cursor:pointer}
 
 footer{margin-top:30px; text-align:center; color:var(--muted); font-size:13px}
-
-@media (max-width:720px){
-  body{font-size:12px}
-  th,td{padding:6px 8px; font-size:12px}
-  .controls{justify-content:center}
-}
 </style>
 </head>
 <body>
 
 <header>
-  <h1>運行中列車 <small style="font-size:0.7em;color:var(--muted)">v0.1.48</small></h1>
+  <h1>運行中列車 <small style="font-size:0.7em;color:var(--muted)">v0.1.49</small></h1>
   <div id="meta">
     <div id="updateTime">データ更新: —</div>
     <div id="localTime">現在時刻: —</div>
   </div>
 </header>
 
-<div class="tab-bar" role="tablist" aria-label="路線切替">
+<div class="tab-bar">
   <button class="tab-btn active" data-line="keio">京王線</button>
   <button class="tab-btn" data-line="inok">井の頭線</button>
 </div>
 
 <div class="container">
   <section id="keio" class="line-block">
-    <div class="subtabs" role="tablist" aria-label="上下切替">
+    <div class="subtabs">
       <button class="subtab active" data-dir="up">上り</button>
       <button class="subtab" data-dir="down">下り</button>
     </div>
     <div class="table-wrap" id="keio-up-wrap">
       <table id="keio-up">
         <thead>
-          <tr>
-            <th data-key="updown">運用記号</th>
-            <th data-key="tr">列車番号</th>
-            <th data-key="ik">行先</th>
-            <th data-key="sy">種別</th>
-            <th data-key="sr">両数</th>
-            <th data-key="pos">現在位置</th>
-            <th data-key="bs">番線</th>
-            <th data-key="dl">遅れ</th>
-            <th data-key="remarks">備考</th>
-          </tr>
+          <tr><th>運用記号</th><th>列車番号</th><th>行先</th><th>種別</th><th>両数</th><th>現在位置</th><th>番線</th><th>遅れ</th><th>備考</th></tr>
         </thead>
         <tbody></tbody>
       </table>
@@ -115,17 +97,7 @@ footer{margin-top:30px; text-align:center; color:var(--muted); font-size:13px}
     <div class="table-wrap" id="keio-down-wrap" style="display:none;">
       <table id="keio-down">
         <thead>
-          <tr>
-            <th data-key="updown">運用記号</th>
-            <th data-key="tr">列車番号</th>
-            <th data-key="ik">行先</th>
-            <th data-key="sy">種別</th>
-            <th data-key="sr">両数</th>
-            <th data-key="pos">現在位置</th>
-            <th data-key="bs">番線</th>
-            <th data-key="dl">遅れ</th>
-            <th data-key="remarks">備考</th>
-          </tr>
+          <tr><th>運用記号</th><th>列車番号</th><th>行先</th><th>種別</th><th>両数</th><th>現在位置</th><th>番線</th><th>遅れ</th><th>備考</th></tr>
         </thead>
         <tbody></tbody>
       </table>
@@ -133,24 +105,14 @@ footer{margin-top:30px; text-align:center; color:var(--muted); font-size:13px}
   </section>
 
   <section id="inok" class="line-block" style="display:none;">
-    <div class="subtabs" role="tablist" aria-label="上下切替">
+    <div class="subtabs">
       <button class="subtab active" data-dir="up">上り</button>
       <button class="subtab" data-dir="down">下り</button>
     </div>
     <div class="table-wrap" id="inok-up-wrap">
       <table id="inok-up">
         <thead>
-          <tr>
-            <th data-key="updown">上下</th>
-            <th data-key="tr">列車番号</th>
-            <th data-key="ik">行先</th>
-            <th data-key="sy">種別</th>
-            <th data-key="sr">両数</th>
-            <th data-key="pos">現在位置</th>
-            <th data-key="bs">番線</th>
-            <th data-key="dl">遅れ</th>
-            <th data-key="remarks">備考</th>
-          </tr>
+          <tr><th>上下</th><th>列車番号</th><th>行先</th><th>種別</th><th>両数</th><th>現在位置</th><th>番線</th><th>遅れ</th><th>備考</th></tr>
         </thead>
         <tbody></tbody>
       </table>
@@ -158,17 +120,7 @@ footer{margin-top:30px; text-align:center; color:var(--muted); font-size:13px}
     <div class="table-wrap" id="inok-down-wrap" style="display:none;">
       <table id="inok-down">
         <thead>
-          <tr>
-            <th data-key="updown">上下</th>
-            <th data-key="tr">列車番号</th>
-            <th data-key="ik">行先</th>
-            <th data-key="sy">種別</th>
-            <th data-key="sr">両数</th>
-            <th data-key="pos">現在位置</th>
-            <th data-key="bs">番線</th>
-            <th data-key="dl">遅れ</th>
-            <th data-key="remarks">備考</th>
-          </tr>
+          <tr><th>上下</th><th>列車番号</th><th>行先</th><th>種別</th><th>両数</th><th>現在位置</th><th>番線</th><th>遅れ</th><th>備考</th></tr>
         </thead>
         <tbody></tbody>
       </table>
@@ -176,13 +128,12 @@ footer{margin-top:30px; text-align:center; color:var(--muted); font-size:13px}
   </section>
 </div>
 
-<div id="alerts" role="region" aria-live="polite">
+<div id="alerts">
   <h3>通知</h3>
   <div id="alertsInner">特記事項はありません。</div>
 </div>
 
-<div class="controls" role="toolbar" aria-label="設定">
-  <label for="intervalSelect" style="color:var(--muted);margin-right:6px">更新間隔</label>
+<div class="controls">
   <select id="intervalSelect" class="control">
     <option value="10000">10秒</option>
     <option value="30000" selected>30秒</option>
@@ -191,15 +142,11 @@ footer{margin-top:30px; text-align:center; color:var(--muted); font-size:13px}
   <button id="themeBtn" class="control">ダークモード：切替</button>
 </div>
 
-<footer>
-  <div>v0.1.48</div>
-</footer>
+<footer>v0.1.49</footer>
 
 <script>
-//* --- 基本設定とマップ --- */
 const FEED_URL = "https://i.opentidkeio.jp/data/traffic_info.json";
 
-// キーを引用符で囲み、3桁の文字列として定義
 const idMap = {
   "001":"京王線新宿","002":"笹塚","003":"代田橋","004":"明大前","005":"下高井戸","006":"桜上水","007":"上北沢",
   "008":"八幡山","009":"芦花公園","010":"千歳烏山","011":"仙川","012":"つつじヶ丘","013":"柴崎","014":"国領",
@@ -226,19 +173,11 @@ const syMap = {
   11:{name:"ライナー", cls:"linermt"}
 };
 
-/* --- 補助関数 --- */
-// 数値を3桁の文字列に変換する共通関数
-function to3(num) {
-  return String(num).padStart(3, '0');
-}
+function to3(num) { return String(num).padStart(3, '0'); }
 
 function updownFromTrain(tr, stId) {
   const num = parseInt(tr.replace(/\D/g, ""), 10);
   if (!isNaN(num)) return (num % 2 === 0) ? "up" : "down";
-  if (stId && stId.length > 1) {
-    const n = parseInt(stId.slice(1), 10);
-    if (!isNaN(n)) return (n % 2 === 0) ? "up" : "down";
-  }
   return "up";
 }
 
@@ -248,89 +187,62 @@ function skToLabel(sk) {
 }
 
 function classifyLineByIk(ik_tr) {
-  const ikNum = parseInt(String(ik_tr).replace(/\D/g, ""), 10);
-  return (ikNum >= 81 && ikNum <= 97) ? "inok" : "keio";
+  const n = parseInt(ik_tr);
+  return (n >= 81 && n <= 97) ? "inok" : "keio";
 }
 
 function posLabel(stId) {
-  const specialPos = {
+  const special = {
     "S016":"京王多摩川〜調布間 上り", "S031":"京王片倉〜北野間 上り", "D038":"北野〜京王片倉間 下り",
     "S021":"東府中〜府中競馬正門前間 下り", "S027":"多摩動物公園〜高幡不動間 上り",
     "D037":"高幡不動〜多摩動物公園間 下り", "D044":"調布〜京王多摩川間 下り",
     "S002":"幡ヶ谷〜笹塚間 下り", "U035":"笹塚〜幡ヶ谷間 上り"
   };
-  if (specialPos[stId]) return specialPos[stId];
+  if (special[stId]) return special[stId];
   if (!stId || stId.length < 2) return "不明";
-
-  const kind = stId[0];
-  const n = parseInt(stId.slice(1), 10);
-  if (isNaN(n)) return "不明";
-
-  // E:停車中, U:駅間上り, D:駅間下り
+  const kind = stId[0], n = parseInt(stId.slice(1), 10);
   if (kind === "E") return idMap[to3(n)] || `#${n}`;
-  if (kind === "U") return `${idMap[to3(n + 1)] || n + 1}〜${idMap[to3(n)] || n}間 上り`;
-  if (kind === "D") return `${idMap[to3(n)] || n}〜${idMap[to3(n - 1)] || n - 1}間 下り`;
+  if (kind === "U") return `${idMap[to3(n + 1)] || n+1}〜${idMap[to3(n)] || n}間 上り`;
+  if (kind === "D") return `${idMap[to3(n)] || n}〜${idMap[to3(n - 1)] || n-1}間 下り`;
   return "不明";
 }
 
-/* --- 通知 --- */
+/* --- 通知管理 --- */
 const NOTIF_KEY = "traffic_viewer_notifications_v1";
 function loadNotifs(){ try{ return JSON.parse(localStorage.getItem(NOTIF_KEY)) || {expires:0,list:[]}; }catch(e){ return {expires:0,list:[]}; } }
-function saveNotifs(obj){ localStorage.setItem(NOTIF_KEY, JSON.stringify(obj)); }
 function addNotifUnique(type, text) {
   const obj = loadNotifs();
-  if (!(obj.list || []).some(x => x.text === text)) {
+  if (!obj.list.some(x => x.text === text)) {
     obj.list.push({ type, text, time: new Date().toLocaleTimeString("ja-JP", { hour12: false }) });
     obj.expires = new Date().setHours(25, 15, 0, 0); 
-    saveNotifs(obj);
+    localStorage.setItem(NOTIF_KEY, JSON.stringify(obj));
   }
 }
-function renderNotifs() {
-  const out = document.getElementById("alertsInner"), obj = loadNotifs();
-  if (!obj.list?.length) { out.textContent = "特記事項はありません。"; return; }
-  out.innerHTML = "";
-  obj.list.forEach(it => {
-    const d = document.createElement("div");
-    d.className = `alert-item ${it.type === "delay" ? "alert-delay" : "alert-exchange"}`;
-    d.textContent = `${it.text} [${it.time}]`;
-    out.appendChild(d);
-  });
-}
 
-function bindSortable(table) {
-  if (!table || table._bound) return;
-  table.tHead.querySelectorAll("th").forEach((th, idx) => {
-    th.addEventListener("click", () => {
-      const asc = !th.classList.contains("sorted-asc");
-      table.tHead.querySelectorAll("th").forEach(h => h.classList.remove("sorted-asc", "sorted-desc"));
-      th.classList.add(asc ? "sorted-asc" : "sorted-desc");
-      const rows = Array.from(table.tBodies[0].rows);
-      rows.sort((a, b) => {
-        const A = a.cells[idx].innerText, B = b.cells[idx].innerText;
-        return asc ? A.localeCompare(B, "ja", { numeric: true }) : B.localeCompare(A, "ja", { numeric: true });
-      });
-      rows.forEach(r => table.tBodies[0].appendChild(r));
-    });
-  });
-  table._bound = true;
-}
-
-/* --- メイン処理 --- */
 async function fetchAndRender() {
   try {
+    // Toei運用データの読み込み
+    let toeiMap = {};
+    try {
+      const tRes = await fetch("toei.txt");
+      if (tRes.ok) {
+        const tText = await tRes.text();
+        let currentUnyo = "";
+        tText.split("\n").forEach(line => {
+          line = line.trim();
+          if (/^\d+[A-Z]$/.test(line)) currentUnyo = line;
+          else if (line) line.split(",").forEach(tr => toeiMap[tr.trim()] = currentUnyo);
+        });
+      }
+    } catch(e) { console.warn("toei.txt not found"); }
+
     const res = await fetch(FEED_URL + "?cache=" + Date.now());
     const data = await res.json();
     
-    // 更新時刻の表示
     const t = data.up?.[0]?.dt?.[0];
     if(t) document.getElementById("updateTime").textContent = `データ更新: ${t.yy}/${t.mt}/${t.dy} ${t.hh}:${t.mm}:${t.ss}`;
 
-    const bodies = { 
-      "keio-up": document.querySelector("#keio-up tbody"), 
-      "keio-down": document.querySelector("#keio-down tbody"), 
-      "inok-up": document.querySelector("#inok-up tbody"), 
-      "inok-down": document.querySelector("#inok-down tbody") 
-    };
+    const bodies = { "keio-up": document.querySelector("#keio-up tbody"), "keio-down": document.querySelector("#keio-down tbody"), "inok-up": document.querySelector("#inok-up tbody"), "inok-down": document.querySelector("#inok-down tbody") };
     Object.values(bodies).forEach(b => b.innerHTML = "");
 
     const trainCount = {};
@@ -347,19 +259,21 @@ async function fetchAndRender() {
         if (!targetBody) return;
 
         const sy = syMap[p.sy] || { name: "不明", cls: "" };
-        const ikLabel = idMap[to3(p.ik_tr)] || `不明(${p.ik_tr})`; // 3桁変換して検索
+        const ikLabel = idMap[to3(p.ik_tr)] || `不明(${p.ik_tr})`;
         const dlNum = parseInt(p.dl, 10) || 0;
         
         let remarks = [];
         if (sy.name === "特急" && p.sr === "8") remarks.push("特急(8両)");
         if (trainCount[trNo] > 1) { remarks.push("車両交換予定"); addNotifUnique("exchange", `${trNo}:車両交換予定`); }
         if (parseInt(p.ik_tr) >= 101 && parseInt(p.ik_tr) <= 120) remarks.push("都営直通");
-        if (dlNum >= 15) addNotifUnique("delay", `${trNo}: ${dlNum}分遅れ`);
+
+        // 運用記号の表示（toei.txtにデータがあれば青文字で表示）
+        const unyoLabel = toeiMap[trNo] ? `<span style="color:#00a;font-weight:bold;margin-right:4px;">${toeiMap[trNo]}</span>` : "";
 
         const row = document.createElement("tr");
         row.innerHTML = `
           <td>${skToLabel(p.sk) || "-"}</td>
-          <td>${trNo}</td>
+          <td>${unyoLabel}${trNo}</td>
           <td>${ikLabel}</td>
           <td><span class="badge ${sy.cls}">${sy.name}</span></td>
           <td>${p.sr || ""}</td>
@@ -372,8 +286,18 @@ async function fetchAndRender() {
       });
     });
 
-    renderNotifs();
-    Object.keys(bodies).forEach(id => bindSortable(document.getElementById(id)));
+    // 通知表示
+    const alertsOut = document.getElementById("alertsInner");
+    const obj = loadNotifs();
+    if (obj.list.length) {
+      alertsOut.innerHTML = "";
+      obj.list.forEach(it => {
+        const d = document.createElement("div");
+        d.className = `alert-item ${it.type === "delay" ? "alert-delay" : "alert-exchange"}`;
+        d.textContent = `${it.text} [${it.time}]`;
+        alertsOut.appendChild(d);
+      });
+    }
 
   } catch (err) { console.error(err); }
 }
@@ -385,7 +309,6 @@ document.addEventListener("DOMContentLoaded", () => {
     document.querySelectorAll(".line-block").forEach(lb => lb.style.display = "none");
     document.getElementById(btn.dataset.line).style.display = "block";
   }));
-  
   document.querySelectorAll(".subtab").forEach(s => s.addEventListener("click", (e) => {
     const block = e.target.closest(".line-block");
     block.querySelectorAll(".subtab").forEach(x => x.classList.remove("active"));
@@ -393,19 +316,12 @@ document.addEventListener("DOMContentLoaded", () => {
     block.querySelectorAll(".table-wrap").forEach(w => w.style.display = "none");
     block.querySelector(`#${block.id}-${s.dataset.dir}-wrap`).style.display = "block";
   }));
-
-  const themeBtn = document.getElementById("themeBtn");
-  themeBtn.addEventListener("click", () => {
-    const isDark = document.documentElement.hasAttribute("data-theme");
-    if(isDark) { document.documentElement.removeAttribute("data-theme"); }
-    else { document.documentElement.setAttribute("data-theme", "dark"); }
+  document.getElementById("themeBtn").addEventListener("click", () => {
+    document.documentElement.hasAttribute("data-theme") ? document.documentElement.removeAttribute("data-theme") : document.documentElement.setAttribute("data-theme", "dark");
   });
-
   fetchAndRender();
   setInterval(fetchAndRender, 30000);
-  setInterval(() => {
-    document.getElementById("localTime").textContent = "現在時刻: " + new Date().toLocaleTimeString("ja-JP");
-  }, 1000);
+  setInterval(() => { document.getElementById("localTime").textContent = "現在時刻: " + new Date().toLocaleTimeString("ja-JP"); }, 1000);
 });
 </script>
 </body>
